--- a/ProAcc/Views/Resource/ResourceConversion.cshtml
+++ b/ProAcc/Views/Resource/ResourceConversion.cshtml
@@ -11,7 +11,7 @@
 
 @Styles.Render("~/Content/css/jqGrid")
 @Scripts.Render("~/bundles/Scripts/jqGrid")
-    <a class="card-title">Conversion Resource</a>
+<a class="card-title">Conversion Resource</a>
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
@@ -19,7 +19,7 @@
     $.jgrid.defaults.iconSet = "Octicons";
 </script>
 <style>
-    .ui-jqgrid {
+    /*.ui-jqgrid {
         font-size: 0.8rem
     }
 
@@ -35,15 +35,29 @@
 
     .ui-jqgrid .ui-jqgrid-bdiv {
         overflow-y: scroll
-    }
+    }*/
 
     #jqGridPager_center {
         visibility: hidden;
     }
 </style>
+<style>
+        .wrapColumnText {
+            white-space: normal !important;
+            height: auto;
+            vertical-align: text-top;
+        }
+        /*div.centered {
+        position: fixed;
+        top: 40%!important;
+        left: 50%!important;
+        margin-top: -50px;
+        margin-left: -100px;
+    }*/
+</style>
 
-<div class="row">
-    <div class="col-lg-12 card" style="margin-bottom:20px !important;">
+<div class="row" style="padding: 1em;">
+    <div class="col-lg-12 card">
         <div class="row">
             @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
             {
@@ -82,14 +96,19 @@
     </div>
 </div>
 
-<div style="margin-left:20px;margin-top:20px">
+<div>
     <table id="jqGrid"></table>
     <div id="jqGridPager"></div>
 </div>
 <script>
     $(document).ready(function () {
             $("#IDInstance").prop("disabled", true);
-            $('#SubmitInstance').prop("disabled", true);
+        $('#SubmitInstance').prop("disabled", true);
+
+         $(window).on("resize", function () {
+        var newWidth = $("#jqGrid").closest(".ui-jqgrid").parent().width();
+             $("#jqGrid").jqGrid("setGridWidth", newWidth, true);
+         });
     });
      $('#IDCustomer').change(function () {
             $("#IDInstance").prop("disabled", false);
@@ -183,25 +202,26 @@
             type: "POST",
             data: { 'IDInstance': IDInstance },
             success: function (result) {
-                $.alert({
-                    title: 'Alert !',
-                    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
-                    icon: 'fa fa-rocket',
-                    animation: 'scale',
-                    closeAnimation: 'scale',
-                    buttons: {
-                        okay: {
-                            text: 'Okay',
-                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
-                            action: function (event, ui) {
-                                $(this).remove();
-                                LoadTable(IDInstance);
-                                $('#jqGrid').trigger('reloadGrid');
-                            }
-                        }
-                    }
+                 Notiflix.Notify.Success('New Live Instance updated !', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                 LoadTable(IDInstance);
+                 $('#jqGrid').trigger('reloadGrid');
+                //$.alert({
+                //    title: 'Alert !',
+                //    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                //    icon: 'fa fa-rocket',
+                //    animation: 'scale',
+                //    closeAnimation: 'scale',
+                //    buttons: {
+                //        okay: {
+                //            text: 'Okay',
+                //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                //            action: function (event, ui) {
+                //                $(this).remove();
+                //            }
+                //        }
+                //    }
 
-                });
+                //});
 
 
             }
@@ -301,9 +321,14 @@
             }
         };
 
+         var rowEdit = function (row) {
+            debugger;
+            if (row == 0)
+                return false;
+        }
 
         $("#jqGrid").jqGrid({
-            url: "@Url.Action("GetDataPreConversion","Resource")",
+            url: "@Url.Action("GetData","Resource",new { Phase_ID= ViewBag.PhaseID})",
             datatype: "json",
             editurl: "@Url.Action("UpdateResource","Resource")",
             colModel: [
@@ -321,7 +346,7 @@
 
                     }
                 },
-                { label: 'Activity / Task ', name: 'Task', width: 150, sortable: false, sorttype: 'integer', editable: true },
+                { label: 'Activity / Task ', name: 'Task', width: 150, sortable: false, sorttype: 'integer', editable: true,classes: 'wrapColumnText' },
                 { label: 'Sequence ', name: 'SequenceNum', width: 50, sortable: false, sorttype: 'integer', editable: true ,hidden: true},
                 {
                     label: 'Role', name: 'RoleID', index: 'RoleID', width: 70, sortable: false, align: 'left', editable: true,
@@ -340,14 +365,18 @@
                 },
 
                 {
-                    label: 'Select Task', name: 'ActivityID', index: 'ActivityID', width: 70, sortable: false, align: 'center', editable: true, hidden: true,
+                    label: 'Select Task', name: 'ActivityID', index: 'ActivityID', width: 70, sortable: false, align: 'left', editable: true, hidden: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',//Add Only
-                    editoptions: {
-                        value: GetMasterAddPreConversion()
+                     editoptions: {
+                        dataUrl: '@Url.Action("MasterAddConversion","Resource")',
+                        buildSelect: buildSelectFromJson
                     }
+                    //editoptions: {
+                    //    value: GetMasterAddConversion()
+                    //}
                 },
                 {
-                    label: 'Status', name: 'StatusId', index: 'StatusId', width: 70,  align: 'center', editable: true,hidden: true,
+                    label: 'Status', name: 'StatusId', index: 'StatusId', width: 70,  align: 'Left', editable: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetStatusDropDown()
@@ -355,7 +384,7 @@
                 },
 
                 {
-                    label: 'Named Owner of Task', name: 'UserID', index: 'UserID', width: 70, sortable: false, align: 'center', editable: true,
+                    label: 'Owner of Task', name: 'UserID', index: 'UserID', width: 70, sortable: false, align: 'center', editable: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetUserDropDown()
@@ -370,7 +399,7 @@
             altRows: true,
             //rownumbers : true,
             //multiselect : true,
-            width: 900,
+            width: 950,
             colMenu: false,
             menubar: false,
             viewrecords: true,
@@ -438,8 +467,12 @@
                 },
                 beforeShowForm: function (form) {
                     //$("#PhaseId").attr("disabled", "disabled");
+
+                    $("#editmodjqGrid").addClass("centered");
+                    $(".navButton").hide();
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
+                    $("#tr_StatusId").hide();
 
                     $("#Task").attr("disabled", "disabled");
                      $("#RoleID").attr("disabled", "disabled");
@@ -448,6 +481,7 @@
                     //debugger;
                     //needDisable=true;
                 },
+                reloadAfterSubmit: true,
                 // afterShowForm: populateUser,
                 errorTextFormat: function (data) {
                     alert("in" + data.responseText);
@@ -460,8 +494,10 @@
                 closeAfterAdd: true,
                 recreateForm: true,
                 beforeShowForm: function (form) {
+                    $("#editmodjqGrid").addClass("centered");
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
+                     $("#tr_StatusId").hide();
                     $("#tr_Task").hide();
                     $("#tr_RoleID").hide();
                      $("#tr_UserID").hide();
@@ -488,8 +524,30 @@
                         success: function (Data) {
 
                             if (Data) {
+
+                                $.alert({
+                                    title: 'Delete !',
+                                    content: 'Deleted Sussfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                    icon: 'fa fa-trfa-trash-o',
+                                    animation: 'scale',
+                                    closeAnimation: 'scale',
+                                    buttons: {
+                                        okay: {
+                                            text: 'Okay',
+                                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                            action: function (event, ui) {
+                                                $(this).remove();
+                                                //LoadTable(IDInstance);
+                                                $('#jqGrid').trigger('reloadGrid');
+                                            }
+                                        }
+                                    }
+
+                                });
+
+
                                 //debugger;
-                                alert("Deleted Sussfully..!");
+                                //alert("");
                             }
                             //for (var i = 0; i < Data.length; i++) {
                             //    var obj = {};
@@ -520,6 +578,15 @@
             }
         );
     }
+    var buildSelectFromJson = function (response) {
+        var html = '<select>', d = JSON.parse(response), length = d.length, i = 0, item;
+        for (; i < length; i++) {
+            item = d[i];
+            html += '<option value=' + item.ActivityID + '>' + item.Task + '</option>';
+        }
+        html += '</select>';
+        return html;
+    };
      function GetStatusDropDown() {
         var Parameters = {};
         $.ajax({
@@ -655,11 +722,11 @@
     });
 	return Parameters;
     }
-    function GetMasterAddPreConversion() {
+    function GetMasterAddConversion() {
 	var Parameters = {};
     $.ajax({
         type: "POST",
-        url: '@Url.Action("MasterAddPreConversion","Resource")',
+        url: '@Url.Action("MasterAddConversion","Resource")',
         //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
         dataType: "json",
         async: false,
@@ -679,6 +746,7 @@
     });
 	return Parameters;
     }
+
     function DeletePost() {
         alert("IN");
 		//Here you need to define ajax call for insert records to server
