--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -255,7 +255,7 @@
 <script>
     //document.body.style.zoom = "80%";
     $(document).ready(function () {
-        LoadTable(1);
+        //LoadTable(1);
     });
     $(window).on("resize", function () {
   var $grid = $("#jqGrid"),
@@ -654,7 +654,7 @@
             gridComplete: function () {
                // alert("tdyt");
                 var recs = $('#jqGrid').jqGrid('getGridParam', 'reccount');
-                debugger;
+                //debugger;
                 if (isNaN(recs) || recs == 0) {
                     $('#export').hide();
                     $("#jqGrid").jqGrid('setGridState', 'hidden');
