--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
         <script src="~/Asset/Jquery/jquery-ui.js"></script>
 
         <link rel="stylesheet" type="text/css" href="~/Asset/css/Menu.css" />*@
+    <link rel="stylesheet" type="text/css" href="~/Asset/css/loading.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Asset/css/ldbtn.min.css" />
     @Styles.Render("~/Content/css/Layout")
     @Scripts.Render("~/bundles/Scripts/Layout")
     @Scripts.Render("~/bundles/Scripts/jquery-ui")
@@ -44,68 +46,69 @@
 
     </script>
     <style>
-        .Class_span{
-        color: red;
-    font-size: 14px;
-    }
-        .instanceRow{
-            max-width:100%;
+        .Class_span {
+            color: red;
+            font-size: 14px;
         }
-        ._search
-        {
+
+        .instanceRow {
+            max-width: 100%;
+        }
+
+        ._search {
             border: 1px solid #ced4da !important;
         }
-        
-.LoaderMasterClass
-{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 9999;
-    text-align: center;
-    background: rgba(0,0,0,0.25);
-    display: none;
-}
-.slideBefore{
 
-    transition: 1s;
-    left: 0;
-    margin-left:0;
-    margin-left: -305px;
-}
-.slide{
+        .LoaderMasterClass {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            z-index: 9999;
+            text-align: center;
+            background: rgba(0,0,0,0.25);
+            display: none;
+        }
 
-    transition: 1s;
-    left: 0;
-    margin-left:0;
-}
+        .slideBefore {
+            transition: 1s;
+            left: 0;
+            margin-left: 0;
+            margin-left: -305px;
+        }
+
+        .slide {
+            transition: 1s;
+            left: 0;
+            margin-left: 0;
+        }
     </style>
-    <style>/* ScrollBar */
+    <style>
+        /* ScrollBar */
         /* width */
         ::-webkit-scrollbar {
-            opacity:0;
+            opacity: 0;
             width: 12px;
         }
 
         /* Track */
         ::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0); 
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
         }
 
         /* Handle */
         ::-webkit-scrollbar-thumb {
-           -webkit-border-radius: 10px;
-    border-radius: 10px;
-    /*background: rgba(255,0,0,0.8);*/ 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+            /*background: rgba(255,0,0,0.8);*/
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
         }
 
             /* Handle on hover */
             ::-webkit-scrollbar-thumb:hover {
-                opacity:1;
-                /*background: rgba(255,0,0,0.4);*/ 
+                opacity: 1;
+                /*background: rgba(255,0,0,0.4);*/
             }
     </style>
     @*<link href="~/Asset/css/Loader.css" rel="stylesheet" />*@
