--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -136,7 +136,10 @@
         <div class="col-lg-12">
 
             <div class="col-md-offset-2 col-md-12">
-                <input type="button" value="Create" class="btn btn-primary" id="btnConsultantCreate" />
+                <button type="button" class="btn btn-primary ld-ext-right" onclick="this.classList.toggle('running')"  id="btnConsultantCreate">
+                    Create
+                    <div class="ld ld-ring ld-spin"></div>
+                </button>
                 <div class="col-lg-3" style="float:right;">
                     @Html.ActionLink("Back to List", "Index", "User")
                 </div>
