Cleared all bugs

--- a/ProAcc/Views/Customers/Index.cshtml
+++ b/ProAcc/Views/Customers/Index.cshtml
@@ -11,7 +11,7 @@
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 <a class="card-title">Customer List</a>
 <hr />
-<table class="table" id="tblCustomer">
+<table class="table _search" id="tblCustomer">
     <thead>
         <tr>
             <th>Customer Name</th>
