--- a/ProAcc/Views/ProjectMonitor/ConvertionMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/ConvertionMonitor.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Pre-Conversion Monitor";
+    ViewBag.Title = "Conversion Monitor";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/css/jqGrid")
