--- a/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "PostConversion Monitor";
+    ViewBag.Title = "Post-Conversion Monitor";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 @*<script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
