--- a/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PostConvertionMonitor.cshtml
@@ -53,7 +53,7 @@
             padding-bottom: 3px;
         }
     </style>*@
-<a class="card-title">PostConversion Monitor</a>
+<a class="card-title">Post-Conversion Monitor</a>
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
